# rust-microservice-practice

./: .gitignore
actix_actors/actix-arbiter/: Cargo.toml
actix_actors/actix-arbiter/src/: main.rs
actix_actors/actix_actor/: Cargo.toml
actix_actors/actix_actor/src/: main.rs
actix_actors/actix_address/: Cargo.toml
actix_actors/actix_address/src/: main.rs
actix_actors/actix_syncarbiter/: Cargo.toml
actix_actors/actix_syncarbiter/src/: main.rs
actix_actors/actix_user_guide/: Cargo.toml
actix_actors/actix_user_guide/src/: main.rs
actix_tutorial/auth_web_svc/: .env  Cargo.toml  readme.MD
actix_tutorial/auth_web_svc/migrations/2019-10-06-030522_create_users_table/: up.sql
actix_tutorial/auth_web_svc/src/: auth_handler.rs  email_service.rs  errors.rs  invitation_handler.rs  main.rs  models.rs  register_handler.rs  utils.rs
async-microservices/futures/: Cargo.toml
async-microservices/futures/src/: main.rs
async-microservices/image_service/: Cargo.toml
async-microservices/image_service/src/: main.rs
background_tasks_and_thread_pools/actors/: Cargo.toml  readme.MD
background_tasks_and_thread_pools/actors/src/: main.rs
background_tasks_and_thread_pools/actors/src/actors/: count.rs  log.rs  resize.rs
background_tasks_and_thread_pools/futures_cpupool/: Cargo.toml  readme.MD
background_tasks_and_thread_pools/futures_cpupool/src/: main.rs
background_tasks_and_thread_pools/implement_thread_pools/: Cargo.toml
background_tasks_and_thread_pools/thread_pool/: Cargo.toml  readme.MD
background_tasks_and_thread_pools/thread_pool/src/: main.rs
background_tasks_and_thread_pools/tokio_threadpool/: Cargo.toml
background_tasks_and_thread_pools/tokio_threadpool/src/: main.rs
basic-microservices/hyper_microservice/: Cargo.toml
basic-microservices/hyper_microservice/src/: main.rs
basic-microservices/rng/: Cargo.toml
basic-microservices/rng/src/: main.rs
concurrency_with_actors/concurrent_actors/: Cargo.toml  readme.MD
concurrency_with_actors/concurrent_actors/src/: main.rs
data-serialisation/serde_serialization/: Cargo.toml
data-serialisation/serde_serialization/src/: color.rs  main.rs
frameworks_and_REST/gotham_microservice/: Cargo.toml  readme.MD
frameworks_and_REST/gotham_microservice/src/: main.rs
frameworks_and_REST/nickel_microservice/: Cargo.toml  readme.MD
frameworks_and_REST/nickel_microservice/src/: main.rs
frameworks_and_REST/nickel_microservice/templates/: confirm.tpl
frameworks_and_REST/rocket_microservice/: Cargo.toml  Rocket.toml  readme.md  test.db
frameworks_and_REST/rocket_microservice/migrations/2019-09-28-094712_create_table/: up.sql
frameworks_and_REST/rocket_microservice/src/: comment.rs  main.rs
frameworks_and_REST/rouille_framework/: .env  Cargo.toml  readme.md  test.db
frameworks_and_REST/rouille_framework/migrations/2019-09-28-042117_create_table/: up.sql
frameworks_and_REST/rouille_framework/src/: main.rs  models.rs
futures/understanding_futures/: Cargo.toml
futures/understanding_futures/src/: main.rs
interacting-with-dbs/mongo_microservice/: Cargo.toml  readme.md
interacting-with-dbs/mongo_microservice/src/: main.rs
interacting-with-dbs/mysql-pool/: Cargo.toml  readme.MD
interacting-with-dbs/mysql-pool/src/: main.rs
interacting-with-dbs/postgres-single-thread/: Cargo.toml  readme.MD
interacting-with-dbs/postgres-single-thread/src/: main.rs
interacting-with-dbs/postgres_pool/: Cargo.toml  readme.MD
interacting-with-dbs/postgres_pool/src/: main.rs
interacting-with-dbs/redis_microservice/: Cargo.toml  readme.md
interacting-with-dbs/redis_microservice/src/: main.rs
orms/chat_app/: .env  .gitignore  Cargo.toml  readme.md
orms/chat_app/migrations/2019-09-26-193658_create_users/: up.sql
orms/chat_app/migrations/2019-09-26-193702_create_channels/: up.sql
orms/chat_app/migrations/2019-09-26-193708_create_memberships/: down.sql  up.sql
orms/chat_app/migrations/2019-09-26-193714_create_message/: up.sql
orms/chat_app/src/: lib.rs  models.rs
orms/diesel_orm/: Cargo.toml  readme.md  test.db
orms/diesel_orm/migrations/2019-09-26-063710_create_tables/: up.sql
orms/diesel_orm/src/: main.rs  models.rs
reactive-microservices/gRPC_microservice/: Cargo.toml  build.rs  ring.proto
reactive-microservices/gRPC_microservice/src/: client.rs  lib.rs  ring.rs  ring_grpc.rs  server.rs
reactive-microservices/json_rpc/: Cargo.toml
reactive-microservices/json_rpc/src/: main.rs
reactive_microservices/: Cargo.toml
tonic_routeguides/: Cargo.toml
tonic_routeguides/proto/: route_guide.proto
tonic_routeguides/src/: main.rs
