[package]
name = "tonic_routeguides"
version = "0.1.0"
authors = ["Naaman Curtis <naaman.the.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.1.2"
bytes = "0.4.12"
futures-preview = { version = "0.3.0-alpha.19", default-features = false, features = ["alloc"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.41"
prost = "0.5"
rand = "0.7.2"
tokio = "0.2.0-alpha.6"
tonic = "0.1.0-alpha.3"

[build-dependencies]
tonic-build = "0.1.0-alpha.3"