[package]
name = "implement_thread_pools"
version = "0.1.0"
authors = ["Naaman Curtis <naaman.the.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
hyper = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
queryst = "2.0"
image = "0.22"
futures-cpupool = "0.1"
