[package]
name = "concurrent_actors"
version = "0.1.0"
authors = ["Naaman Curtis <naaman.the.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.29"
actix = "0.8.3"
actix-web = "1.0.8"
actix-session = "0.2.0"
actix-service = "0.4.2"
env_logger = "0.7.0"