[package]
name = "gotham_microservice"
version = "0.1.0"
authors = ["Naaman Curtis <naaman.the.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
futures = "0.1.29"
gotham = "0.4.0"
gotham_derive = "0.4.0"
hyper = "0.12.35"
mime = "0.3.14"
tokio = "0.1.22"
tokio-postgres = "0.3.0"
