[package]
name = "mysql-pool"
version = "0.1.0"
authors = ["Naaman Curtis <naaman.the.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32"
csv = "1.0"
failure = "0.1"
mysql = "14.1"
r2d2 = "0.8"
r2d2_mysql = "9.0"
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"