[package]
name = "redis_microservice"
version = "0.1.0"
authors = ["Naaman Curtis <naaman.the.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
failure = "0.1.5"
r2d2 = "0.8.5"
r2d2_redis = "0.11.0"
redis = "0.12.0"
