[package]
name = "diesel_orm"
version = "0.1.0"
authors = ["Naaman Curtis <naaman.the.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
failure = "0.1.5"
r2d2 = "0.8"
serde = "1.0.101"
serde_derive = "1.0.101"
uuid = { version = "0.7", features = ["v4"] }
