[package]
name = "json_rpc"
version = "0.1.0"
authors = ["Naaman Curtis <naaman.the.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
jsonrpc = "0.11.0"
jsonrpc-http-server = "13.2.0"
log = "0.4"
env_logger = "0.6"
serde = "1.0"
serde_derive = "1.0"